--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,41 +1,42 @@
 :root {
-    --fontSystem: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
-    --serif: 'Georgia', serif;
+    --fontSystem: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Helvetica Neue", Helvetica, sans-serif;
+    --serif: "Georgia", serif;
     --black: #121;
     --resto: #968282;
-    --rojo: #6593CD;
+    --rojo: #6593cd;
     --grey: #efefef;
     --greyc: #ccc;
     --cruise2: #def7f2;
     --heath: #430e16;
     --white: #fff;
     --impureWhite: #c4d1e8;
-    --twitterColor: #00ACEE;
-    --facebookColor: #3B5998;
+    --twitterColor: #00acee;
+    --facebookColor: #3b5998;
     --base: #430e16;
     --red9: #71585c;
     --green9: #5d7259;
-    --pp: #0080B8;
-    --psoe: #E30613;
-    --zec: #9A1622;
+    --pp: #0080b8;
+    --psoe: #e30613;
+    --zec: #9a1622;
     --ciudadanos: #f07a36;
-    --chunta: #EFB027;
+    --chunta: #efb027;
     --mint: #0fe1be;
     --nightRider: #431729;
-    --frenchGrey: #E1DCE3;
+    --frenchGrey: #e1dce3;
     --bunting: #271764;
-    --celery: #A5CC5F;
-    --luckyPointer: #221E61;
+    --celery: #a5cc5f;
+    --luckyPointer: #221e61;
     --floralwhite: #fffaf0;
     --fluor: #c5ecac;
     --acapulco: #b1dccc;
     --gondola: #542436;
-    --florawhite9: rgba(255, 250, 240, .9);
-    --white9: rgba(255, 255, 255, .9);
+    --florawhite9: rgba(255, 250, 240, 0.9);
+    --white9: rgba(255, 255, 255, 0.9);
     --periwinkie: #e7ecff;
     --woodsmoke: #19160a;
     --colorlink: #1624f7;
-    --bgcTabs: #45d5a0;
+    --bgcTabs: #ba4864;
     --hoverTabs: #212843;
-    --headerHome: rgba(239, 239, 239, .5);
+    --searchHover: hsl(201, 106%, 24%);
 }
