--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -752,41 +752,22 @@ path.q2-3 {
 }
 
 .mapa-container {
-    background-color: #dbe3e1;
     position: relative;
 }
 
-.mapa-elecciones {
-    path {
-        stroke: #111;
-    }
+.hidden {
+    display: none;
 }
 
 #map {
     width: 100%;
-    height: 500px;
-}
-
-.svgLayer {
+    height: 100vh;
     position: relative;
-    width: 100%;
-    height: 500px;
+    margin: auto auto;
     svg {
         position: absolute;
-        top: -4000px;
-        left: -4000px;
-        width: 8000px;
-        height: 8000px;
-    }
-    path {
-        stroke: #630e1d;
-        stroke-width: 1px;
-        fill: #630e1d;
-        fill-opacity: 0.5;
-        cursor: pointer;
-        &:hover {
-            fill-opacity: 1;
-        }
+        width: 100%;
+        height: 100%;
     }
 }
 
