--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -36,7 +36,7 @@
     --periwinkie: #e7ecff;
     --woodsmoke: #19160a;
     --colorlink: #1624f7;
-    --bgcTabs: #ba4864;
+    --bgcTabs: #f45f64;
     --hoverTabs: #212843;
     --searchHover: hsl(201, 106%, 24%);
 }
