--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -759,6 +759,19 @@ path.q2-3 {
     display: none;
 }
 
+.distritos {
+    fill: rgba(255, 255, 255, 0.1);
+    stroke: #81165a;
+    stroke-opacity: 0.1;
+    cursor: pointer;
+    transition: all ease-in 0.3s;
+    &:hover {
+        stroke-width: 1;
+        fill: #c22361;
+        fill-opacity: 0.5;
+    }
+}
+
 #map {
     width: 100%;
     height: 100vh;
