--- a/css/styles.css
+++ b/css/styles.css
@@ -656,7 +656,7 @@ http://www.tipue.com/search
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Helvetica Neue", Helvetica, sans-serif;
 
-    height: 64px;
+    height: 48px;
     margin: 0;
     padding: 1rem;
 
@@ -828,7 +828,7 @@ http://www.tipue.com/search
 
 .btn-search {
     width: 50px;
-    height: 64px;
+    height: 48px;
 
     cursor: pointer;
 
@@ -1460,7 +1460,11 @@ img {
 }
 
 .bgc-header-home {
-    background-color: #fff;
+    background-color: #fbf7f0;
+}
+
+.color-header {
+    color: #2f17a9;
 }
 
 .bgc-tabs {
