--- a/src/css/_color.css
+++ b/src/css/_color.css
@@ -7,7 +7,11 @@
 }
 
 .bgc-header-home {
-    background-color: var(--white);
+    background-color: var(--bgcHeader);
+}
+
+.color-header {
+    color: var(--colorHeader);
 }
 
 .bgc-tabs {
